<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 	Steffen
		XML Strings von Evernote 
		Bitte nicht selbständig ändern!!!
	-->
    <string name="err_creating_note">Error creating new Evernote note</string>
    <string name="msg_image_saved">Image saved to Evernote</string>
    <string name="label_app_title">Evernote EDAM Android Demo</string>
    <string name="label_select_button">Select Image</string>
    <string name="label_message">No image selected</string>
    <string name="label_save_button">Save</string>
    <string name="err_image_selected">Select Image</string>
    <string name="err_retrieving_resource">Error retrieving resource</string>
    <string name="msg_retrieved_resource">Retrieved resource from server</string>
    <string name="esdk__loading">Loading...</string>
    <string name="esdk__pick_notebook">Pick a notebook</string>
    <string name="label_login">Evernote Login</string>
    <string name="label_logout">Logout</string>
    <string name="label_search">Search</string>
    <string name="esdk__image_picker">Image Picker</string>
    <string name="esdk__simple_note">Simple Note</string>
    <string name="esdk__search_notes">Search notes</string>
    <string name="label_select_notebook_button">Select Notebook</string>
    <string name="title">Note Title</string>
    <string name="content">Note Content</string>
    <string name="empty_content_error">Note title and content cannot be empty</string>
    <string name="note_saved">Note saved to Evernote</string>
    <string name="notes_searched">Searching notes has finished</string>
    <string name="ok">Ok</string>
    <string name="simple_note">Simplenote</string>
    <string name="image_picker">Image Picker</string>
    <string name="search_notes">Search Notes</string>
    <string name="search_hint">Search notes</string>
    <string name="error_listing_notebooks">Error listing notebooks</string>
    <string name="error_creating_notestore">Error creating notestore</string>
    <string name="error_saving_note">Error saving note</string>
    <string name="error_listing_notes">Error listing note</string>
    <string name="goBack">Back</string>

    
    <!-- 	Steffen
		ENDE XML Strings von Evernote
	-->
    
    
    <string name="app_name">Saig</string>
    <string name="action_settings">Settings</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="login_save">Remember?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_new_user">Register a new User</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_password_repeat">Confirm Password</string>
    <string name="register_register">Register</string>
    <string name="external_logins_auphonic">Auphonic</string>
    <string name="external_logins_podio">Podio</string>
    <string name="external_logins_evernote">Evernote</string>
    <string name="save_logins">Save Information</string>
    <string name="preference_file_key">de.saig.awp.PREFERENCE_FILE_KEY</string>
    <string name="take_picture">Take Picture</string>
    <string name="record_voice">Record Voice</string>
    <string name="stopp_record_voice">Stopp Voice Recording</string>
    <string name="show_media">Show Media</string>
    <string name="settings">Settings</string>
    <string name="title_activity_overview">Overview</string>
    <string name="hello_world">Hello world!</string>
    <string name="picture_description_wildcard">wildcard for the photoscreen</string>
    <string name="logout_question">Do you really want to sign out?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="back">Back</string>
    <string name="save">Save</string>    
    <string name="name">Name</string> 
    <string name="overview_evernote_api">Upload Picture/Note with Evernote </string>
    
    
	<string name="game_settings_headline">Game Settings</string>
    <string name="game_settings_new_workshop">new Workshop</string>
    <string name="game_settings_new_game">new Game</string>
    <string name="game_settings_new_round">new Round</string>
    
    
    <string name="new_workshop_headline">new Workshop</string>
    <string name="new_workshop_start_date">Start Date</string>
    <string name="new_workshop_end_date">End Date</string>
  
    
    <string name="new_round_headline">new Round</string>
    <string name="new_round_example_number">Number like 1,2,3 etc</string>

    <string name="mediadetails_new_annotation">new Annotation</string>

    
    <string name="new_game_headline">new Game</string>    
    
    <string-array name="spinnerSettings">
         <item>Settings</item>    
         <item>Logout</item>
         <item>Login Verknüpfen</item>
         <item>Spiel einstellen</item>
    </string-array>    
    

    <!-- Media Overview Testdaten-->
    
    <string-array name="spinnerWorkshop">
         <item>Workshop 1</item>    
         <item>Workshop 2</item>
    </string-array> 
    
        
    <string-array name="spinnerGame">
         <item>Prune the Product Tree</item>    
         <item>Speedboat</item>
         <item>Product Box</item>
         <item>Me and My Shadow</item>
    </string-array> 
    
            
     <string-array name="spinnerRound">
         <item>1</item>    
         <item>2</item>
         <item>3</item>
         <item>4</item>
    </string-array> 
    
    <!-- Media Overview Testdaten Ende-->
     
    
    

    
    <string name="chosen_workshop">ausgewählter Workshop</string> 
    <string name="testing_podio_headline">wenn hier etw. steht funkioniert Podiozugriff</string>
    
    <string name="make_your_annotations">Make your Annotations</string>
    <string name="annotation_list">List of all Annotations with Text and Audiofiles</string>
    <string name="annotation_edit">Edit Annotation</string>
    <string name="annotation_name">Annotation Name</string>
    <string name="annotation_description">Annotation Description</string>
    <string name="button_save">Save</string>
    <string name="button_back">Back</string>
    <string name="button_record">Start Recording</string>
    
    
</resources>
