<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp" 
    android:background="@drawable/bg1" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/external_logins_podio" />

    <EditText
        android:id="@+id/external_logins_podio_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/external_logins_podio_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/external_logins_evernote"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/evernoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_login"
        android:onClick="onClickEvernote"  
        android:background="#D6D6D6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/external_logins_auphonic"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/external_logins_auphonic_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/external_logins_auphonic_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/saved_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_logins"
        android:layout_marginTop="25dp"
        android:onClick="onSave"  
        android:background="#D6D6D6" />
    
</LinearLayout>
