<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp" 
    android:background="@drawable/bg1" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/new_round_headline" />



    <EditText
        android:id="@+id/new_workshop_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/new_round_example_number" />
   
    
    
    
    
	<Button
        android:id="@+id/saveNewWorkshop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="25dp"
        android:onClick="saveNewRound"
        android:background="#D6D6D6" />
    
    
    
    <Button
        android:id="@+id/backToSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="25dp"
        android:onClick="backToSettings"
        android:background="#D6D6D6" />
    
</LinearLayout>