<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp" 
    android:background="@drawable/bg1" >
    

    

     <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp" >

        <requestFocus />
    </EditText>

    
    
    
	<Button
        android:id="@+id/overview_take_picture"
        android:text="@string/take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"       
        android:background="#D6D6D6"/>
    
    
	<Button
        android:id="@+id/overview_record_voice"
        android:text="@string/record_voice" 
        android:onClick="recordVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" 
        android:background="#D6D6D6"/>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="25dp" >

	    <Button
	        android:id="@+id/overview_show_media"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:onClick="showMedia"
	        android:text="@string/show_media" />

	    <Spinner
	        android:id="@+id/spinnerSettings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/settings" />

	</RelativeLayout>
    
</LinearLayout>