<?xml version="1.0" encoding="utf-8"?>

<!-- 	Steffen
		XML von Evernote
		Bitte nicht selbständig ändern!!!
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:id="@+id/list" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:background="#cccccccc"
        android:padding="3dp">

        <Button
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/label_login"
            android:onClick="login"
            android:layout_weight="1" />

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickBack"
            android:text="@string/goBack" />

        <Button
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="logout"
            android:text="@string/label_logout" />

    </LinearLayout>
</LinearLayout>
